@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-02-02
+CHANGES.txt - 2009-02-03
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler no longer logs child processes killed via SIGKILL as
+	  "crashed".
 	- The printer link shown on the "job moved" template was bad (STR #3085)
 	- Updated the HTML templates to use the HTML 4.01 DOCTYPE (STR #3086)
 	- The scheduler did not track the "paused" reason properly if a
